# honest-calendar-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.json  server.py
.github/workflows/: publish.yml
