[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "honest-calendar-mcp"
version = "0.1.0"
description = "Local MCP server for Google Calendar — read, create, update events with your Google account directly."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Bartosz Kuć", email = "firma@bartosza.pl" }]
keywords = ["mcp", "google-calendar", "calendar", "google", "scheduling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/bartosz-kuc/honest-calendar-mcp"
Repository = "https://github.com/bartosz-kuc/honest-calendar-mcp"
Issues = "https://github.com/bartosz-kuc/honest-calendar-mcp/issues"

[project.scripts]
honest-calendar-mcp = "honest_calendar_mcp:sync_main"

[tool.hatch.build.targets.wheel]
sources = ["."]
only-include = ["server.py"]

[tool.hatch.build.targets.wheel.force-include]
"server.py" = "honest_calendar_mcp.py"

[tool.hatch.build.targets.sdist]
include = ["server.py", "README.md", "LICENSE", "SECURITY.md", "pyproject.toml"]
